# experimental

./: .gitignore  AUTHORS  CONTRIBUTING.md  README.md  WORKSPACE
.github/scripts/: lint.sh
.github/workflows/: build-test.yml  (+3 more)
any-sketch/: .bazelrc  WORKSPACE
any-sketch-java/: .bazelrc  README.md  WORKSPACE
any-sketch-java/src/main/java/org/wfanet/anysketch/distributions/: BUILD.bazel  ExponentialDistribution.java  FingerprintingDistribution.java
any-sketch-java/src/main/proto/wfa/common/: BUILD.bazel
any-sketch/src/main/cc/any_sketch/: BUILD.bazel  aggregators.cc  aggregators.h  any_sketch.cc  any_sketch.h  distributions.cc  distributions.h  fingerprinters.cc  fingerprinters.h  value_function.h
any-sketch/src/main/cc/any_sketch/crypto/: BUILD.bazel  README.md  key_combiner_main.cc  sketch_encrypter.cc  sketch_encrypter.h  sketch_encrypter_adapter.cc  sketch_encrypter_adapter.h
any-sketch/src/main/cc/any_sketch/util/: macros.h
any-sketch/src/main/cc/math/: BUILD.bazel  distributions.cc  distributions.h  noise_parameters_computation.cc  noise_parameters_computation.h
any-sketch/src/main/proto/wfa/common/: BUILD.bazel  el_gamal_key.proto  liquid_legions.proto  noise_parameters.proto
any-sketch/src/test/cc/math/: BUILD.bazel  distributions_test.cc  noise_parameters_computation_test.cc
containers/: .bazelrc  WORKSPACE
containers/bazel/: BUILD.bazel
cross-media-measurement/: .lintignore  WORKSPACE  remote.bazelrc
dp_consistency/: README.md  Unilever_Report_4_corrected.xlsx
examples/: .bazelrc  .editorconfig  WORKSPACE  build.gradle.kts  settings.gradle
examples/src/main/cc/wfa/examples/streaming/: BUILD.bazel  hello_streaming_client.cc  hello_streaming_client.h  hello_streaming_server.cc  hello_streaming_service.cc  hello_streaming_service.h
examples/src/main/go/wfa/examples/streaming/: BUILD.bazel  hello_streaming_client.go  hello_streaming_server.go
examples/src/main/java/org/wfanet/examples/streaming/: BUILD.bazel  HelloStreamingClient.java  HelloStreamingServer.java
examples/src/main/kotlin/org/wfanet/examples/streaming/: BUILD.bazel  HelloStreamingClient.kt  HelloStreamingServer.kt
examples/src/main/proto/wfa/examples/streaming/: BUILD.bazel  hello_streaming_service.proto
java/: defs.bzl
mcapi/: event_groups.txt  mcapi.proto  my_report.textproto
opendcr/: README.md  decryption.py  opendcr_api.py  result_manager.py  s3_downloader.py  vsock_client.py  vsock_handler.py  vsock_server.py
rules-swig/: LICENSE  README.md
src/main/cc/any_sketch/: BUILD.bazel  aggregators.cc  aggregators.h  any_sketch.cc  any_sketch.h  any_sketch_test.cc  distributions.cc  distributions.h  exponential_index_function.cc  exponential_index_function.h  exponential_index_function_test.cc  farm_hash_function.cc  farm_hash_function.h  fingerprinters.h  hash_function.h  index_function.h  sketch_encrypter.cc  sketch_encrypter.h  sketch_encrypter_java_adapter.h  sketch_encrypter_java_adapter_test.cc  sketch_encrypter_test.cc  value_function.h
src/main/cc/any_sketch/crypto/: BUILD.bazel  README.md  key_combiner_main.cc  sketch_encrypter.cc  sketch_encrypter.h  sketch_encrypter_adapter.cc  sketch_encrypter_adapter.h  sketch_encrypter_adapter_test.cc  sketch_encrypter_test.cc
src/main/cc/any_sketch/util/: BUILD.bazel  macros.h
src/main/cc/estimation/: BUILD.bazel  estimators.cc  estimators.h  estimators_test.cc  utils.cc  utils.h  utils_test.cc
src/main/java/org/wfanet/anysketch/: AnySketch.java  BUILD.bazel  ExponentialIndexFunction.java  FarmHashFunction.java  HashFunction.java  IndexFunction.java  README.md  SketchJavaEncrypter.java  SketchProtoConverter.java  SketchProtos.java  SketchSql.java  UniqueValueFunction.java  ValueFunction.java  sketch_encrypter.swig
src/main/java/org/wfanet/anysketch/aggregators/: Aggregator.java  Aggregators.java  BUILD.bazel  SumAggregator.java  UniqueAggregator.java
src/main/java/org/wfanet/anysketch/crypto/: BUILD.bazel  sketch_encrypter.swig
src/main/java/org/wfanet/anysketch/distributions/: Distribution.java  Distributions.java  ExponentialDistribution.java  FingerprintingDistribution.java  GeometricDistribution.java  OracleDistribution.java  UniformDistribution.java
src/main/java/org/wfanet/anysketch/fingerprinters/: BUILD.bazel  FarmFingerprinter.java  SaltedFingerprinter.java
src/main/java/org/wfanet/anysketch/sql/: bigquery_template.sql
src/main/java/org/wfanet/estimation/: BUILD.bazel  ValueHistogram.java  estimators.swig
src/main/proto/wfa/any_sketch/crypto/: BUILD.bazel  sketch_encryption_methods.proto
src/test/cc/testutil/: BUILD.bazel  matchers.h  random.h
src/test/cc/wfa/any_sketch/: BUILD.bazel  aggregators_test.cc  any_sketch_test.cc  distributions_test.cc  exponential_index_function_test.cc  matchers.h
src/test/cc/wfa/any_sketch/crypto/: BUILD.bazel  sketch_encrypter_adapter_test.cc  sketch_encrypter_test.cc
src/test/cc/wfa/estimation/: BUILD.bazel  estimators_test.cc
src/test/cc/wfa/testutil/: BUILD.bazel  random.cc
src/test/java/org/wfanet/anysketch/: AnySketchTest.java  BUILD.bazel  ExponentialIndexFunctionTest.java  FarmHashFunctionTest.java  SketchJavaEncrypterTest.java  SketchProtoConverterTest.java  SketchProtosTest.java  SketchSqlTest.java  UniqueValueFunctionTest.java
src/test/java/org/wfanet/anysketch/aggregators/: BUILD.bazel
src/test/java/org/wfanet/anysketch/crypto/: BUILD.bazel  SketchJavaEncrypterTest.java
src/test/java/org/wfanet/anysketch/distributions/: BUILD.bazel  ExponentialDistributionTest.java  GeometricDistributionTest.java  OracleDistributionTest.java  UniformDistributionTest.java
src/test/java/org/wfanet/anysketch/fingerprinters/: BUILD.bazel  FarmFingerprinterTest.java
src/test/java/org/wfanet/anysketch/testdata/: BUILD.bazel  dirac_distribution.textpb  geometric_distribution.sql  liquid_legions.textpb  verbatim_distribution.textpb
src/test/java/org/wfanet/estimation/: BUILD.bazel  EstimatorsTest.java  ValueHistogramTest.java
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
tools/: BUILD.bazel  mkdir_wrapper.sh
(+199 files in other folders)
