package(default_visibility = ["//visibility:public"])

cc_library(
    name = "any_sketch",
    srcs = [
        "any_sketch.cc",
    ],
    hdrs = [
        "any_sketch.h",
    ],
    deps = [
        ":hash_function",
        ":index_function",
        ":value_function",
        "@absl//absl/base:core_headers",
        "@absl//absl/container:fixed_array",
        "@absl//absl/container:flat_hash_map",
        "@absl//absl/container:node_hash_map",
        "@absl//absl/random:bit_gen_ref",
    ],
)

cc_library(
    name = "aggregators",
    srcs = ["aggregators.cc"],
    hdrs = ["aggregators.h"],
    deps = [],
)

cc_library(
    name = "hash_function",
    srcs = [],
    hdrs = [
        "hash_function.h",
    ],
    deps = [
        "@absl//absl/types:span",
    ],
)

cc_library(
    name = "farm_hash_function",
    srcs = ["farm_hash_function.cc"],
    hdrs = [
        "farm_hash_function.h",
    ],
    deps = [
        ":hash_function",
        "@absl//absl/types:span",
        "@farmhash",
    ],
)

cc_library(
    name = "index_function",
    srcs = [],
    hdrs = [
        "index_function.h",
    ],
    deps = [
    ],
)

cc_library(
    name = "exponential_index_function",
    srcs = ["exponential_index_function.cc"],
    hdrs = [
        "exponential_index_function.h",
    ],
    deps = [
        ":index_function",
        "@absl//absl/base:core_headers",
        "@absl//absl/types:span",
    ],
)

cc_library(
    name = "value_function",
    srcs = [],
    hdrs = [
        "value_function.h",
    ],
    deps = [
        "@absl//absl/strings",
    ],
)
