package(default_visibility = ["//visibility:public"])

cc_library(
    name = "any_sketch",
    srcs = ["any_sketch.cc"],
    hdrs = ["any_sketch.h"],
    deps = [
        ":hash_function",
        ":index_function",
        ":value_function",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:node_hash_map",
        "@com_google_absl//absl/random:bit_gen_ref",
    ],
)

cc_library(
    name = "aggregators",
    srcs = ["aggregators.cc"],
    hdrs = ["aggregators.h"],
)

cc_library(
    name = "distributions",
    srcs = ["distributions.cc"],
    hdrs = ["distributions.h"],
    deps = [
        ":hash_function",
        "//src/main/cc/any_sketch/util:macros",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "hash_function",
    hdrs = ["hash_function.h"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "farm_hash_function",
    srcs = ["farm_hash_function.cc"],
    hdrs = ["farm_hash_function.h"],
    deps = [
        ":hash_function",
        "@com_google_absl//absl/types:span",
        "@farmhash",
    ],
)

cc_library(
    name = "index_function",
    hdrs = ["index_function.h"],
)

cc_library(
    name = "exponential_index_function",
    srcs = ["exponential_index_function.cc"],
    hdrs = [
        "exponential_index_function.h",
    ],
    deps = [
        ":index_function",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "value_function",
    hdrs = ["value_function.h"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)
