cc_test(
    name = "estimators_test",
    size = "small",
    srcs = [
        "estimators_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch:exponential_index_function",
        "//src/main/cc/any_sketch:farm_hash_function",
        "//src/main/cc/estimation:estimators",
        "@absl//absl/container:flat_hash_set",
        "@googletest//:gtest_main",
    ],
)
