load("@rules_java//java:defs.bzl", "java_proto_library")

package(default_visibility = [
    "//visibility:public",
])

java_proto_library(
    name = "el_gamal_key_java_proto",
    deps = ["@any_sketch//src/main/proto/wfa/common:el_gamal_key_proto"],
)

java_proto_library(
    name = "liquid_legions_java_proto",
    deps = ["@any_sketch//src/main/proto/wfa/common:liquid_legions_proto"],
)

java_proto_library(
    name = "noise_parameters_java_proto",
    deps = ["@any_sketch//src/main/proto/wfa/common:noise_parameters_proto"],
)
