load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "el_gamal_key_proto",
    srcs = ["el_gamal_key.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "el_gamal_key_cc_proto",
    deps = [":el_gamal_key_proto"],
)

proto_library(
    name = "liquid_legions_proto",
    srcs = ["liquid_legions.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "liquid_legions_cc_proto",
    deps = [":liquid_legions_proto"],
)

proto_library(
    name = "noise_parameters_proto",
    srcs = ["noise_parameters.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "noise_parameters_cc_proto",
    deps = [":noise_parameters_proto"],
)
