load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "any_sketch",
    srcs = [
        "AnySketch.java",
        "ExponentialIndexFunction.java",
        "HashFunction.java",
        "IndexFunction.java",
        "UniqueValueFunction.java",
        "ValueFunction.java",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)
