load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "any_sketch",
    srcs = [
        "AnySketch.java",
        "ExponentialIndexFunction.java",
        "HashFunction.java",
        "FarmHashFunction.java",
        "IndexFunction.java",
        "UniqueValueFunction.java",
        "ValueFunction.java",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "sketch_proto_converter",
    srcs = [
        "SketchProtoConverter.java"
    ],
    deps = [
        ":any_sketch",
        "@maven//:com_google_guava_guava",
        "//src/main/proto/wfa/any_sketch/crypto:sketch_java_proto",
    ],
)
