load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "anysketch",
    srcs = [
        "AnySketch.java",
        "ValueFunction.java",
    ],
    deps = [
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "sketch_proto_converter",
    srcs = [
        "SketchProtos.java",
    ],
    deps = [
        ":anysketch",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "//src/main/proto/wfa/any_sketch/crypto:sketch_java_proto",
        "//src/main/proto/wfa/measurement/api/v1alpha:sketch_java_proto",
        "@maven//:com_google_guava_guava",
    ],
)
