load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "sketch_encryption_methods_proto",
    srcs = ["sketch_encryption_methods.proto"],
    strip_import_prefix = "/src/main/proto",
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v1alpha:sketch_proto",
    ],
)

cc_proto_library(
    name = "sketch_encryption_methods_cc_proto",
    deps = [":sketch_encryption_methods_proto"],
)

java_proto_library(
    name = "sketch_encryption_methods_java_proto",
    deps = [":sketch_encryption_methods_proto"],
)

java_proto_library(
    name = "sketch_java_proto",
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v1alpha:sketch_proto",
    ],
)
