cc_test(
    name = "sketch_encrypter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "sketch_encrypter_adapter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_adapter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter_adapter",
        "@googletest//:gtest_main",
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v1alpha:sketch_cc_proto",
    ],
)
