cc_test(
    name = "sketch_encrypter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter",
        "//src/main/proto/wfa/any_sketch/crypto:sketch_encryption_methods_cc_proto",
        "//src/test/cc/wfa/testutil:matchers",
        "//src/test/cc/wfa/testutil:random",
        "@com_google_absl//absl/strings",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "sketch_encrypter_adapter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_adapter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter_adapter",
        "//src/test/cc/wfa/testutil:random",
        "@googletest//:gtest_main",
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v1alpha:sketch_cc_proto",
    ],
)
