load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "any_sketch_test",
    srcs = ["AnySketchTest.java"],
    test_class = "org.wfanet.anysketch.AnySketchTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch:any_sketch",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "exponential_index_function_test",
    srcs = ["ExponentialIndexFunctionTest.java"],
    test_class = "org.wfanet.anysketch.ExponentialIndexFunctionTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch:any_sketch",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "unique_value_function_test",
    srcs = ["UniqueValueFunctionTest.java"],
    test_class = "org.wfanet.anysketch.UniqueValueFunctionTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch:any_sketch",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "farm_hash_function_test",
    srcs = ["FarmHashFunctionTest.java"],
    test_class = "org.wfanet.anysketch.FarmHashFunctionTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch:any_sketch",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
