load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "any_sketch_test",
    srcs = ["AnySketchTest.java"],
    test_class = "org.wfanet.anysketch.AnySketchTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "sketch_proto_converter_test",
    srcs = ["SketchProtoConverterTest.java"],
    test_class = "org.wfanet.anysketch.SketchProtoConverterTest",
    deps = [
        "//src/main/java/org/wfanet/anysketch",
        "//src/main/java/org/wfanet/anysketch:sketch_proto_converter",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "//src/main/proto/wfa/any_sketch/crypto:sketch_java_proto",
        "//src/main/proto/wfa/measurement/api/v1alpha:sketch_java_proto",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
