load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "hello_streaming_client",
    srcs = ["hello_streaming_client.cc"],
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_binary(
    name = "hello_streaming_server",
    srcs = ["hello_streaming_server.cc"],
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
