load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "hello_streaming_client",
    srcs = ["hello_streaming_client.go"],
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_go_grpc",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "hello_streaming_server",
    srcs = ["hello_streaming_server.go"],
    deps = [
        "//src/main/proto/wfa/examples/streaming:hello_streaming_service_go_grpc",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
