load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//src:__subpackages__"])

proto_library(
    name = "hello_streaming_service_proto",
    srcs = ["hello_streaming_service.proto"],
    # TODO: Add strip_import_prefix = "/src/main/proto" once cc_grpc_library
    # no longer fails with it. See https://github.com/grpc/grpc/issues/20675.
)

java_proto_library(
    name = "hello_streaming_service_java_proto",
    deps = [":hello_streaming_service_proto"],
)

kt_jvm_grpc_library(
    name = "hello_streaming_service_kt_jvm_grpc",
    srcs = [":hello_streaming_service_proto"],
    deps = [":hello_streaming_service_java_proto"],
)

cc_proto_library(
    name = "hello_streaming_service_cc_proto",
    deps = [":hello_streaming_service_proto"],
)

cc_grpc_library(
    name = "hello_streaming_service_cc_grpc",
    srcs = [":hello_streaming_service_proto"],
    grpc_only = True,
    deps = [":hello_streaming_service_cc_proto"],
)

go_proto_library(
    name = "hello_streaming_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "wfa/examples/streaming",
    proto = ":hello_streaming_service_proto",
)

go_grpc_library(
    name = "hello_streaming_service_grpc_go_library",
    importpath = "wfa/examples/streaming/grpc",
    deps = [":hello_streaming_service_proto"],
)
